# ska-sdp-wflow-mid-selfcal

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile-MPI  NOTES.md  mpibig.cpp
docs/: Doxyfile  Makefile  requirements.txt
docs/src/: additional_apps.rst  conf.py  di_script.rst  docker_image.rst  example.rst  index.rst  install.rst  installation.rst  kubernetes.rst  pipeline.rst  workflow_steps.rst
docs/src/_templates/: footer.html
scripts/: kubectl_run.sh
src/: selfcal_di.py
src/ska_sdp_wflow_mid_selfcal/: __init__.py  change_dir.py  cleanup.py  cmdline_builder.py  command_utils.py  directory_creation.py  logging_setup.py  multi_node_support.py  pipeline.py  selfcal_logic.py  set_env.py  singularify.py  skymodel.py  slurm_support.py  slurm_utils.py  stream_capture.py
src/ska_sdp_wflow_mid_selfcal/apps/: dd_pipeline.py  dd_pipeline_app.py  dd_pipeline_app2.py  dd_pipeline_app2.yml  dd_pipeline_config.yml  fits2png.py  logparse.py  pipeline_app.py  (+2 more)
src/templates/: slurm_script.jinja2
tests/: test_change_dir.py  test_cleanup.py  test_cmdline_builder.py  test_command_generation.py  test_command_line_generator.py  test_command_utils.py  test_create_output_subdirectory.py  test_get_slurm_allocated_resources.py  test_make_multi_node.py  test_placeholder.py  test_remove_non_mfs_fits.py  test_remove_unnecessary_fits_files.py  test_set_env.py  test_singularify.py  test_sky_model.py  test_slurm_mode.py  test_stream_capture.py
tests/data/: example.sourcedb
(+1 files in other folders)
