[tool.poetry]
name = "ska-sdp-wflow-mid-selfcal"
version = "0.2.6"
description = "SKA Mid self-calibration pipeline"
authors = ["The SKA Mid self-calibration pipeline developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-wflow-mid-selfcal"
documentation = "https://developer.skao.int/projects/ska-sdp-wflow-mid-selfcal"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mid-selfcal-di = "ska_sdp_wflow_mid_selfcal.apps.di_pipeline:main"
mid-selfcal-dd = "ska_sdp_wflow_mid_selfcal.apps.dd_pipeline:main"
mid-selfcal-fits2png = "ska_sdp_wflow_mid_selfcal.apps.fits2png:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22"
matplotlib = "^3.0"

# With astropy 4.x we run into this issue with markupsafe:
# https://stackoverflow.com/q/72191560
# Pinning markupsafe==2.0.1 does not work
astropy = "^5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
build = "^0.7.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pylint-junit = "^0.3.2"

[tool.black]
line-length = 79
